force-app/main/default/objects/SupplierCase__c/SupplierCase__c.object-meta.xml
<CustomObject>
    <label>Supplier Case</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Ticket No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>