force-app/main/default/objects/SupplierCase__c/fields/CaseType__c.field-meta.xml
<CustomField>
    <fullName>CaseType__c</fullName>
    <label>Typologie</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faq</fullName>
                <default>true</default>
                <label>Faq</label>
            </value>
            <value>
                <fullName>Anomalie</fullName>
            </value>
            <value>
                <fullName>assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>