force-app/main/default/objects/SupplierCase__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Détail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>