force-app/main/default/objects/SupplierCase__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <label>Problématique métier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factures</fullName>
            </value>
            <value>
                <fullName>Déclarations</fullName>
            </value>
            <value>
                <fullName>Bibliothèque</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>