force-app/main/default/objects/SupplierCase__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Criticité</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faible</fullName>
                <default>true</default>
                <label>Faible</label>
            </value>
            <value>
                <fullName>Moyenne</fullName>
            </value>
            <value>
                <fullName>Forte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>