force-app/main/default/objects/SupplierCase__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rapporteur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>