force-app/main/default/objects/SupplierCase__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non traité</fullName>
                <default>true</default>
                <label>Non traité</label>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Fait</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>