force-app/main/default/objects/SupplierCase__c/fields/SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDate__c</fullName>
    <label>Date et heure d&apos;envoi</label>
    <type>DateTime</type>
</CustomField>