force-app/main/default/objects/SupplierCase__c/fields/SupportAgent__c.field-meta.xml
<CustomField>
    <fullName>SupportAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interlocuteur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>