force-app/main/default/objects/SupplierCase__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Titre</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>